--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,16 @@
-# Prerequisites
-*.d
+# Ignore everything
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+/* 
 
-# Precompiled Headers
-*.gch
-*.pch
+# Allowed file types
+!*.cpp
+!*.hpp
+!*.h
+!*.drawio
+!*.txt
+!.gitignore
+!LICENSE
+!*.md
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
 
-# Fortran module files
-*.mod
-*.smod
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
